--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -1,3 +1,4 @@
+{% set active_webpage = "Login" %}
 {% extends "header.html.j2" %}
 
 {% block body %}
@@ -28,5 +29,7 @@
 			</div>
 		</div>
 	</div>
+
+	{{ close() }}
 
 {% endblock %}
