Started working on sections content in the dashboard

--- a/templates/dashboard.html.j2
+++ b/templates/dashboard.html.j2
@@ -63,7 +63,7 @@
 											{% include "_dashboard_settings.html.j2" %}
 										{% endif %}
 										{% if (section_names[i] == 'Sections'): %}
-											<p>Manage your sections.</p>
+											{% include "_dashboard_sections.html.j2" %}
 										{% endif %}
 									</div>
 								</section>
