--- a/templates/_dashboard_sections.html.j2
+++ b/templates/_dashboard_sections.html.j2
@@ -1,1 +1,42 @@
-<p>test</p>
+<div class="row">
+	<div class="column-12">
+		<div class="column-6">
+			<p class="db-quick-title">Section Management</p>
+			<p class="db-quick-subtitle">Your sections</p>
+				{% set sections = ['Welcome', 'Portfolio', 'Testimonials', 'Connect'] %}
+				{% for i in range(3) %}
+						<div class="db-quick-row">
+							<div class="db-section-item">
+								<div class="db-section-item-wrapper">
+									<p class="db-quick-inner-text db-section-content-expand">Section {{ sections[i] }}</p>
+									<p class="db-quick-inner-text db-section-content-hide">Hide</p>
+									<div class="db-section-item-content">
+										{% if sections[i] == 'Portfolio' %}
+											{% include "_portfolio_form.html.j2" %}
+										{% else %}
+											{% include "_blank_form.html.j2" %}
+										{% endif %}
+									</div>
+								</div>
+							</div>
+						</div>
+				{% endfor %}
+			
+		</div>
+		<div class="column-6">
+			<p class="db-quick-title">Add New</p>
+			<p class="db-quick-subtitle">Add a new section</p>
+			<div class="db-quick-row">
+				<div class="db-section-item">
+					<div class="db-section-item-wrapper">
+						<p class="db-quick-inner-text db-section-content-expand">+ Add new section</p>
+						<p class="db-quick-inner-text db-section-content-hide">Hide</p>
+						<div class="db-section-item-content">
+							{% include "_new_section.html.j2" %}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>				
+</div>
