--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -267,6 +267,8 @@ a:link, a:visited { text-decoration: none; }
 
 .dashboard-content {  
   padding: 30px;
+  margin-bottom: 50px;
+  min-height: 1000px;
   background-color: #FFF;
   text-align: left;
   position: relative;
@@ -288,19 +290,34 @@ a:link, a:visited { text-decoration: none; }
   .db-quick-row { margin: 10px 0; }
   .db-quick-item { margin-top: 20px; }
   .db-quick-text { margin: 10px 0; }
-  .db-quick-inner-text { font-size: 0.9em; }
+  .db-quick-inner-text { font-size: 0.9em; margin-bottom: 10px; }
   .db-quick-select { width: 90px; }
-  .db-section-item { border: 1px solid #F2F2F2; width: 90%; border-radius: 3px; }
+  .db-section-item { border: 1px solid #F2F2F2; width: 90%; border-radius: 3px; border-top-left-radius: 5px; border-top-right-radius: 5px; overflow: hidden; }
   .db-section-item-wrapper { background-color: #EEE; @include transition(background-color, 450ms);
     &:hover { background-color: #F2F2F2; }
   }
-  .db-section-content-expand, .db-section-content-hide { padding: 10px; cursor: pointer; }
-  .db-section-content-hide { display: none; }
-  .db-section-content-expand { display: inline-block; width: 90%; }
+  .db-section-content-expand, .db-section-content-hide { padding: 10px; cursor: pointer; font-size: 0.9em; }
+  .db-section-content-hide { display: none; width: 48%; text-align: right; font-size: 0.8em; }
+  .db-section-content-expand { display: inline-block; width: 50%; }
   .db-section-item-content { padding: 10px; background-color: #FFF; display: none; }
+  .portfolio-item-modal-overlay { position: fixed; top: 0; right: 0; bottom: 0; left: 0; display: none; z-index: 999; background: #404040; overflow-x: hidden; overflow-y: scroll; 
+    .modal-content { width: 95%; margin: 5% auto; background-color: #FFFFFF; @include transform(translateY(100%)); @include transition(transform, 500ms); 
+      &.open { @include transform(translateY(0px)); }
+      [class*='db-portfolio-item'] { display: none; }
+    }
+  }
+  .db-new-portfolio-item-wrapper { width: 100%; }
+  .db-portfolio-item-meta-columns { font-size: 0.9em; border: 1px solid #F2F2F2; padding: 12px 5px 10px 5px;  border-top-left-radius: 5px; border-top-right-radius: 5px; }
+  .db-portfolio-item-meta { padding: 12px 5px 10px 5px; border: 1px solid #F2F2F2; border-top: 0; }
+  .db-portfolio-item-text { font-size: 0.9em; }
+  .db-portfolio-item-actions { font-size: 0.8em; }
+  .db-portfolio-item-edit, .db-portfolio-item-delete { padding: 2px 5px; border: 1px solid #3a85c2; color: #3a85c2; margin-right: 5px; cursor: pointer; @include transition(all, 450ms); }
+  .db-portfolio-item-edit { &:hover { background-color: #3a85c2; color: #FFF; } }
+  .db-portfolio-item-delete { border-color: #dd2020; color: #dd2020; &:hover { background-color: #dd2020; color: #FFF; } }
+  .add-portfolio-item { padding: 2px 5px; border: 1px solid #2cc436; font-size: 0.8em; @include transition(all, 450ms); cursor: pointer; &:hover { background-color: #2cc436; color: #FFF; } }
 
   input { font-size: 0.9em; }
-  textarea { @include transition(border-color, 750ms);  width: 95%; height: 125px; }
+  textarea { @include transition(border-color, 750ms);  width: 100%; height: 125px; }
   textarea:focus { border-color: #3a85c2; }
   .align-right { text-align: right; margin-right: 5%; }
 }
