--- a/templates/_portfolio_form.html.j2
+++ b/templates/_portfolio_form.html.j2
@@ -1,1 +1,27 @@
-portfolio form here
+<form class="general-form">
+	<div class="db-quick-row">
+		<div class="form-group">
+			<p class="db-quick-inner-text">Section title:</p>
+			<input type="text" name="section_title" value="" class="general-input">
+		</div>
+		<div class="form-group">
+			<p class="db-quick-inner-text">Section Description:</p>
+			<input type="text" name="section_description" value="" class="general-input">
+		</div>
+		<div class="form-group">
+			<p class="db-quick-inner-text">Section Content:</p>
+			<textarea type="text" name="section_content" value="" class="general-input"></textarea>
+		</div>
+		<div class="align-right">
+			<button type="submit" class="save-btn" id="general-submit">Save</button>
+		</div>
+	</div>
+</form>
+<div class="form-group">
+	<p class="db-quick-inner-text">Portfolio Items:</p>
+	<div class="db-new-portfolio-item-wrapper">
+		{% include '_portfolio_item_view.html.j2' %}
+		{% include '_portfolio_item_add_edit.html.j2' %}
+	</div>
+	<span class="add-portfolio-item">New item</span>
+</div>
