--- a/templates/_dashboard_sections.html.j2
+++ b/templates/_dashboard_sections.html.j2
@@ -1,41 +1,44 @@
-<div class="row">
-	<div class="column-12">
-		<div class="column-6">
-			<p class="db-quick-title">Section Management</p>
-			<p class="db-quick-subtitle">Your sections</p>
-				{% set sections = ['Welcome', 'Portfolio', 'Testimonials', 'Connect'] %}
-				{% for i in range(3) %}
-						<div class="db-quick-row">
-							<div class="db-section-item">
-								<div class="db-section-item-wrapper">
-									<p class="db-section-content-expand">Section {{ sections[i] }}</p>
-									<span class="db-section-content-hide">Hide</span>
-									<div class="db-section-item-content">
-										{% if sections[i] == 'Portfolio' %}
-											{% include "_portfolio_form.html.j2" %}
-										{% else %}
-											{% include "_blank_form.html.j2" %}
-										{% endif %}
+{% block body %}
+	<div class="row">
+		<div class="column-12">
+			<div class="column-6">
+				<p class="db-quick-title">Section Management</p>
+				{% set sections = execute_query("SELECT title, description, position, type, class_id FROM section_list JOIN section_type USING (tid) ORDER BY position") %}
+				{% set numb_of_sections = sections | length %}
+				<p class="db-quick-subtitle">Your sections</p>
+					{% for i in range(0, numb_of_sections) %}
+							<div class="db-quick-row">
+								<div class="db-section-item">
+									<div class="db-section-item-wrapper">
+										<p class="db-section-content-expand">Section {{ sections[i]["title"] }}</p>
+										<span class="db-section-content-hide">Hide</span>
+										<div class="db-section-item-content">
+											{% if sections[i]["type"] == 'portfolio' %}
+												{% include "_portfolio_form.html.j2" %}
+											{% else %}
+												{% include "_blank_form.html.j2" %}
+											{% endif %}
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-				{% endfor %}
-		</div>
-		<div class="column-6">
-			<p class="db-quick-title">Add New</p>
-			<p class="db-quick-subtitle">Add a new section</p>
-			<div class="db-quick-row">
-				<div class="db-section-item">
-					<div class="db-section-item-wrapper">
-						<p class="db-section-content-expand">+ Add new section</p>
-						<p class="db-section-content-hide">Hide</p>
-						<div class="db-section-item-content">
-							{% include "_new_section.html.j2" %}
+					{% endfor %}
+			</div>
+			<div class="column-6">
+				<p class="db-quick-title">Add New</p>
+				<p class="db-quick-subtitle">Add a new section</p>
+				<div class="db-quick-row">
+					<div class="db-section-item">
+						<div class="db-section-item-wrapper">
+							<p class="db-section-content-expand">+ Add new section</p>
+							<p class="db-section-content-hide">Hide</p>
+							<div class="db-section-item-content">
+								{% include "_new_section.html.j2" %}
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>				
-</div>
+		</div>				
+	</div>
+{% endblock %}
