--- a/templates/_new_section.html.j2
+++ b/templates/_new_section.html.j2
@@ -1,32 +1,28 @@
-<form class="general-form">
-	<div class="db-quick-row">
-		<div class="form-group align-right">
-			<span class="db-quick-inner-text">Order</span>
-			<select name="section_order" class="db-quick-select">
-				<option value="">-</option>
-				<option value="1">1</option>
-				<option value="2">2</option>
-				<option value="3">2</option>
-			</select>
+{% block body %}
+	{% set query = "SELECT tid, type FROM section_type" %}
+	{% set types = execute_query(query) %}
+	<form class="section-add-form">
+		<div class="db-quick-row">
+			<div class="form-group">
+				<p class="db-quick-inner-text">Section Title:</p>
+				<input type="text" name="section-add-title" value="" class="section-add-input">
+			</div>
+			<div class="form-group">
+				<p class="db-quick-inner-text">Section Description:</p>
+				<input type="text" name="section-add-description" value="" class="section-add-input">
+			</div>
+			<div class="form-group">
+				<p class="db-quick-inner-text">Section Type:</p>
+				<select name="section_type" value="" class="general-input section-add-input">
+					{% for i in range (0, types | length) %}
+						<option value="{{ types[i]['tid'] }}">{{ types[i]['type'] }}</option>
+					{% endfor %}
+				</select>
+			</div>
+			<div class="align-right">
+				<button type="submit" class="save-btn" id="section-add-submit">Save</button>
+			</div>
 		</div>
-		<div class="form-group">
-			<p class="db-quick-inner-text">Section title:</p>
-			<input type="text" name="section_title" value="" class="general-input">
-		</div>
-		<div class="form-group">
-			<p class="db-quick-inner-text">Section Description:</p>
-			<input type="text" name="section_description" value="" class="general-input">
-		</div>
-		<div class="form-group">
-			<p class="db-quick-inner-text">Section Type:</p>
-			<select name="section_type" value="" class="general-input">
-				<option value="">-</option>
-				<option value="blank">Blank</option>
-				<option value="portfolio">Portfolio</option>
-			</select>
-		</div>
-		<div class="align-right">
-			<button type="submit" class="save-btn" id="general-submit">Save</button>
-		</div>
-	</div>
-</form>
+	</form>
+
+{% endblock %}
