--- a/templates/_portfolio_form.html.j2
+++ b/templates/_portfolio_form.html.j2
@@ -1,27 +1,38 @@
-<form class="general-form">
-	<div class="db-quick-row">
-		<div class="form-group">
-			<p class="db-quick-inner-text">Section title:</p>
-			<input type="text" name="section_title" value="" class="general-input">
+{% block body %}
+	{% set class_id = sections[i]["class_id"] %}
+	<form class="section-portfolio-{{ class_id }}-form">
+		<div class="db-quick-row">
+			<div class="form-group align-right">
+				<span class="db-quick-inner-text">Position</span>
+				<select class="db-quick-select section-portfolio-{{ class_id }}-input">
+					{% for position in range (1, numb_of_sections + 1) %}
+						{% if position == (sections[i]["position"] | int) %}
+							<option value="{{ position }}"selected>{{ position }}</option>
+						{% else %}
+							<option value="{{ position }}">{{ position }}</option>
+						{% endif %}
+					{% endfor %}
+				</select>
+			</div>
+			<div class="form-group">
+				<p class="db-quick-inner-text">Section Title:</p>
+				<input type="text" name="section-portfolio-{{ class_id }}_title" value="{{ sections[i]['title'] }}" class="section-portfolio-{{ class_id }}-input">
+			</div>
+			<div class="form-group">
+				<p class="db-quick-inner-text">Section Description:</p>
+				<input type="text" name="section-portfolio-{{ class_id }}_description" value="{{ sections[i]['description'] }}" class="section-portfolio-{{ class_id }}-input">
+			</div>
+			<div class="align-right">
+				<button type="submit" class="save-btn" id="section-portfolio-{{ class_id }}-submit">Save</button>
+			</div>
 		</div>
-		<div class="form-group">
-			<p class="db-quick-inner-text">Section Description:</p>
-			<input type="text" name="section_description" value="" class="general-input">
+	</form>
+	<div class="form-group">
+		<p class="db-quick-inner-text">Portfolio Items:</p>
+		<div class="db-new-portfolio-item-wrapper">
+			{% include '_portfolio_item_view.html.j2' %}
+			{% include '_portfolio_item_add_edit.html.j2' %}
 		</div>
-		<div class="form-group">
-			<p class="db-quick-inner-text">Section Content:</p>
-			<textarea type="text" name="section_content" value="" class="general-input"></textarea>
-		</div>
-		<div class="align-right">
-			<button type="submit" class="save-btn" id="general-submit">Save</button>
-		</div>
+		<span class="add-portfolio-item">New item</span>
 	</div>
-</form>
-<div class="form-group">
-	<p class="db-quick-inner-text">Portfolio Items:</p>
-	<div class="db-new-portfolio-item-wrapper">
-		{% include '_portfolio_item_view.html.j2' %}
-		{% include '_portfolio_item_add_edit.html.j2' %}
-	</div>
-	<span class="add-portfolio-item">New item</span>
-</div>
+{% endblock %}
